--- a/config/config.json
+++ b/config/config.json
@@ -4,7 +4,8 @@
     "password": null,
     "database": "owner_db",
     "host": "localhost",
-    "dialect": "mysql"
+    "dialect": "mysql",
+    "port": 8889
   },
   "test": {
     "username": "root",
@@ -12,7 +13,8 @@
     "database": "owner_db",
     "host": "localhost",
     "dialect": "mysql",
-    "logging": false
+    "logging": false,
+    "port": 8889
   },
   "production": {
     "use_env_variable": "JAWSDB_URL",
