please dont break

--- a/config/config.json
+++ b/config/config.json
@@ -1,20 +1,20 @@
 {
   "development": {
     "username": "root",
-    "password": root,
+    "password": "root",
     "database": "owner_db",
     "host": "localhost",
     "dialect": "mysql",
-    "port": 8889
+    "port": 3306
   },
   "test": {
     "username": "root",
-    "password": null,
+    "password": "root",
     "database": "owner_db",
     "host": "localhost",
     "dialect": "mysql",
     "logging": false,
-    "port": 8889
+    "port": 3306
   },
   "production": {
     "use_env_variable": "JAWSDB_URL",
